web/htdocs/status.css
/*
+------------------------------------------------------------------+
|             ____ _               _        __  __ _  __           |
|            / ___| |__   ___  ___| | __   |  \/  | |/ /           |
|           | |   | '_ \ / _ \/ __| |/ /   | |\/| | ' /            |
|           | |___| | | |  __/ (__|   <    | |  | | . \            |
|            \____|_| |_|\___|\___|_|\_\___|_|  |_|_|\_\           |
|                                                                  |
| Copyright Mathias Kettner 2012             mk@mathias-kettner.de |
+------------------------------------------------------------------+

This file is part of Check_MK.
The official homepage is at http://mathias-kettner.de/check_mk.

check_mk is free software;  you can redistribute it and/or modify it
under the  terms of the  GNU General Public License  as published by
the Free Software Foundation in version 2.  check_mk is  distributed
in the hope that it will be useful, but WITHOUT ANY WARRANTY;  with-
out even the implied warranty of  MERCHANTABILITY  or  FITNESS FOR A
PARTICULAR PURPOSE. See the  GNU General Public License for more de-
ails.  You should have  received  a copy of the  GNU  General Public
License along with GNU Make; see the file  COPYING.  If  not,  write
to the Free Software Foundation, Inc., 51 Franklin St,  Fifth Floor,
Boston, MA 02110-1301 USA.

*/

/* Styles used for marking up Monitoring data, such as host and
   service states, Perf-O-Meters und the like */

/* States */

/* Colors of the five possible host and service states
  CRIT:    #e2001a
  UNKNOWN: #f79802
  WARN:    #e6c908
  OK:      #41a62a
*/

td.state {
    text-align: center;
    font-weight: bold;
    width: 32px;
}

td.svcstate.stale {
    background-image: url("images/white_60percent.png");
    background-repeat: repeat;
}

table.data tr.data td.stale,
table.data td.perfometer.stale div.title {
    color: #888;
    text-shadow: 0.8px 0.8px 0.8px #fff;
}

table.data tr.data td.stale.state2,
table.data tr.data td.stale.hstate1 {
    color: #a00;
    text-shadow: 0.8px 0.8px 0.8px #f88;
}


/* OK/UP */
/* TODO: Replace class "odd0" with "odd state0" */
.state0, .hstate0, .state0 a, .hstate0 a {
    background-color: #0b3; color: #fff;
}
.odd0 .state0, .odd0 .hstate0, .odd0 .state0 a, .odd0 .hstate0 a {
    background-color: #1c4;
}
.even0 .state0, .even0 .hstate0, .even0 .state0 a, .even0 .hstate0 a {
    background-color: #0b3;
}



.hstate {
    white-space: nowrap;
}
/* WARN */
.state1, .even1 .state1, .state1 a, tr.groupheader td.state1 {
    background-color: #f8f800; color: #000;
}
.odd0 .state1, .odd1 .state1 {
    background-color: #ff5;
}

/* CRIT/DOWN */
.state2, .even0 .state2, .even2 .state2, .hstate1, .state2 a, .hstate2 a {
    background-color: #f00; color: #fff;
}
.odd0 .state2, .odd2 .state2 {
    background-color: #f44;
}


/* UNKNOWN / UNREACH */
.state3, .hstate2, .state3 a, .hstate2 a {
    background-color: #f80; color: #fff;
}
.odd0 .state3, .odd3 .state3 {
    background-color: #f91;
}

/* PENDING */
.statep, .hstatep, .statep a, .hstatep a {
    background-color: #888; color: #fff;
}

/* in DOWNTIME */
.stated, .hstated, .stated a, .hstated a {
    background-color: #0af; color: #fff;
}

/* inline state markers in check output */
b.stmark {
    margin-left: 2px;
    padding: 1px 3px;
    border-radius: 4px;
    font-size: 7pt;
    border: 1px solid #666;
    position: relative;
    top: -1px;
}

/* inline icon in plugin output for URLs */
img.pluginurl {
    width: 16px;
    height: 16px;
    vertical-align: middle;
    margin: 1px;
}

/* *some* problem */
.states, .hstates {
    background-image: url("images/someproblem.png");
    background-position: center center;
    background-repeat: repeat;
    color: #000;
}
.states a, .hstates a {
    color: #000;
}

/* Status of sites in sidebar and in WATO */

.sitestatus.online   {
    background-color: #3c0;
    color: #fff;
    border-color: #0f0;
}
.sitestatus.disabled {
    background-color: #666;
    color: #ccc;
    border-color: #888;
}
.sitestatus.dead     {
    background-color: #c00;
    color: #f88;
    border-color: #f44;
}
.sitestatus.waiting  {
    background-color: #666;
    color: #fff;
    border-color: #ccc;
}
.sitestatus.down     {
    background-color: #f00;
    color: #fff;
    border-color: #800;
}
.sitestatus.unreach  {
    background-color: #f80;
    color: #fff;
    border-color: #840;
}
.sitestatus.unknown  {
    background-color: #26c;
    color: #fff;
    border-color: #44f;
}
/* Performeter styling */

table.data tr.data td.perfometer {
    padding: 1px 2px 2px 1px;
    width: 120px;
    height: 22px;
    vertical-align: middle;
}

td.perfometer div.content {
   position: relative;
   top: 0px;
   left: 1px;
   width: 120px;
   height: 0px;
   float: left;
   z-index: 20;
}

td.perfometer div.title {
   position: relative;
   top: 5px;
   left: 0px;
   width: 120px;
   height: 0px;
   text-align: center;
   white-space: nowrap;
   float: left;
   z-index: 40;
}

td.perfometer img.glass {
   position: relative;
   top: 1px;
   left: 2px;
   width: 120px;
   height: 22px;
   margin-bottom: 1px;
   z-index: 30;
   display: block;
}


td.perfometer table {
    width: 100%;
    height: 22px;
    border-spacing: 0px;
    padding: 0;
    margin: 0;
    border: 1px solid #aaa;
    height: 24px;
}

table.data td.perfometer td.inner {
    padding: 0;
    margin: 0;
    border: none;
    height: 22px;
    padding: 0px 0px 0px 1px;
}

table.data td.perfometer div.stacked table:first-child {
    border-bottom-style: none;
}

table.data td.perfometer div.stacked table {
    height: 12px;
}

table.data td.perfometer div.stacked td.inner {
    height: 10px;
}

td.perfometer a {
    color: #000;
    text-decoration: none;
}

td.statex {  /* zero count */
  color: #ccc;
}

/* Row coloring in case of the different states */
tr.odd0, tr.oddp        { background-color: #eee; }
tr.even0, tr.evenp       { background-color: #ddd; }

td.odd0  { background-color: #eee; }
td.even0 { background-color: #ddd; }

tr.odd1        { background-color: #ffc; }
tr.even1       { background-color: #ffa; }

tr.odd2        { background-color: #fcc; }
tr.even2       { background-color: #faa; }

tr.odd3        { background-color: #ffe0a0; }
tr.even3       { background-color: #ffefaf; }

/* Row headers in single dataset layout */


/*-------------------------------------------------------------------------.
|                 ____       _       _                                     |
|                |  _ \ __ _(_)_ __ | |_ ___ _ __ ___                      |
|                | |_) / _` | | '_ \| __/ _ \ '__/ __|                     |
|                |  __/ (_| | | | | | ||  __/ |  \__ \                     |
|                |_|   \__,_|_|_| |_|\__\___|_|  |___/                     |
|                                                                          |
+--------------------------------------------------------------------------+
| Styles used in painters (see plugins/views/painters.py)                  |
'-------------------------------------------------------------------------*/


/* Styles the background of host columns which have a red colored background when critical */
.data div.hostdown {
    background-color: #f22;
    border-radius: 4px;
    border: 2px solid #000;
    padding-left: 3px;
    padding-right: 3px;
}

table.data td.age {
    text-align: right;
    color: #666;
    white-space: nowrap;
}
table.data td.age.staletime {
    color: red;
    font-weight: bold;
}

table.data td.age.recent {
    font-weight: bold;
    color: #000;
}

table.data td.nowrap {
    white-space: nowrap;
}

td.badflag {
    font-weight: bold;
    background-color: #f64;
}

td.goodflag {
    color: #080;
}

table.data td.buttons.visuals {
    width: 75px;
}
table.data .state0 *, table.data .state2 *, table.data .state3 * {
    color: white;
}

td.icons {
    white-space: nowrap;
    width: 1px;
}
td.icons img {
    height: 20px;
    margin-right: 0px;
}

td.icon {
    width: 20px;
}

img.tabicon {
    width: 16px;
    height: 16px;
    vertical-align: middle;
    position: relative;
    top: -1px;
    left: 0px;
}

/* Styles used by specific painters. These should be modularized later ... */
table.data div.objectlist div {
    float: left;
    padding: 1px 3px;
    border-style: solid;
    border-width: 1px;
    margin: 1px;
}

table.data tr.data td.pnpgraph {
   padding: 0;
}

tr.data td.pnpgraph div.pnp_graph > a > img {
    border: 1px solid #888;
    margin: 4px 4px 4px 4px;
    box-shadow: 1px 1px 3px #000000;
}

/*
 Sites can be represented by small icons with a size of 24x24 px.
 This is the styling for these icons.
 */
img.siteicon {
    width: 24px;
    height: 24px;
    border: 1px solid #666;
}

table.customvars {
    border-collapse: collapse;
    padding: 0px;
}
table.data tr.data td table.customvars td {
    /* border: 1px solid #ccc; */
    padding: 0px 5px 0px 0px;
}
table.data tr.data td table.customvars td:last-child {
    border-left: 1px solid #bbb;
    padding-left: 5px;
}

td.matchgroups span {
    margin-right: 3px;
    background-color: #ffffff;
    border: 1px solid #eeeeee;
    border-radius: 3px;
    box-shadow: 0px 0px 1px #888;
    padding: 0px 3px;
    font-family: monospace;
}

